--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <header>
         <div id="contenedor-header">
-            <img src="/fotos/image.png" class="img-fluid rounded-circle" alt="imagen de portada" id="imagen">
+            <img src="/image.png" class="img-fluid rounded-circle" alt="imagen de portada" id="imagen">
             <div id="contenedor-data">
                 <h1 id="nombre">CAMILA SOL BERALDO</h1>
                 <div id="contenedor-iconos">
