--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
                 <h2>EXPERIENCIA LABORAL</h2>
                 <ul class="lista">
                     <li>
+                        <h3>Administrativa | </h3>
+                        <span><strong>Estudio Arnaud</strong></span><span> | Marzo 2023 - Actualidad
+                        </span>
+                    </li>
+                    <li>
                         <h3>Encargada | </h3>
                         <span><strong>Salón infantil "El Show del Mono"</strong></span><span> | Junio 2018 - Actualidad
                         </span>
