--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+de<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -30,9 +30,9 @@
                 <h1 id="nombre">CAMILA SOL BERALDO</h1>
                 <div id="contenedor-iconos">
                     <ul id="iconos">
-                        <li class="bi bi-calendar-date-fill" data-title="Birthday Date:" data-value="08-07-1995"> </li>
-                        <li class="bi bi-telephone-fill" data-title="Cellphone:" data-value="15-4167-5393"></li>
-                        <li class="bi bi-geo-alt-fill" data-title="Address:" data-value="Vicente Lopez, Buenos Aires">
+                        <li class="bi bi-calendar-date-fill" data-title="Fecha de Nacimiento:" data-value="08-07-1995"> </li>
+                        <li class="bi bi-telephone-fill" data-title="Celular:" data-value="15-4167-5393"></li>
+                        <li class="bi bi-geo-alt-fill" data-title="Dirección:" data-value="Vicente Lopez, Buenos Aires">
                         </li>
                         <li class="bi bi-envelope-fill" data-title="E-mail:" data-value="camilasberaldo@hotmail.com">
                         </li>
