--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <ul id="iconos">
                         <li class="bi bi-calendar-date-fill" data-title="Fecha de Nacimiento:" data-value="08-07-1995"> </li>
                         <li class="bi bi-telephone-fill" data-title="Celular:" data-value="15-4167-5393"></li>
-                        <li class="bi bi-geo-alt-fill" data-title="Dirección:" data-value="Vicente Lopez, Buenos Aires">
+                        <li class="bi bi-geo-alt-fill" data-title="Direccion:" data-value="Vicente Lopez, Buenos Aires">
                         </li>
                         <li class="bi bi-envelope-fill" data-title="E-mail:" data-value="camilasberaldo@hotmail.com">
                         </li>
@@ -160,7 +160,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
- 
+
 </body>
 
 </html>
